# pv-site-prediction

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml  run_exp.sh
.github/workflows/: ci.yaml  release.yaml
dashboard/: pv_dash.py
dashboards/: sme_pv_dash.py  test_errors_explore.ipynb
exp_reports/: README.md  results
exp_reports/010_effect_of_blackout/: README.md
exp_reports/011_no_pv_history/: README.md
exp_reports/012_irradiance/: results.txt
exp_reports/013_satellite/: readme.md
exp_reports/014_remove_live_PV_at_inference/: README.md  graphs.ipynb
exp_reports/015_recent_power/: readme.md
exp_reports/016_wind/: readme.md
notebooks/: Island_data_exploration.ipynb  client_fc_analysis.ipynb  data_exploration.ipynb  data_exploration2.ipynb  data_exploration_sme.ipynb  eval_irradiance_predictions.py  example_NetCDF.ipynb  experiment_analysis.ipynb  explore_nwp.ipynb  explore_pv.ipynb  explore_wind_india.ipynb  forecast_output.ipynb  infering_metadata.ipynb  investigate_pv_timezones.ipynb  island_data_import.ipynb  island_data_import_v2.ipynb  island_data_viz.ipynb  plot_decision_trees.ipynb  pseudo_irradiance_test.py  psuedo_converter.py  pv_site_model_comp_exps.ipynb  reformat_NWP.ipynb  sample_analysis.ipynb  temp_fc_excel_processing.ipynb  xarray_exploration.ipynb
notebooks/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb
psp/: data.py  dataset.py  gis.py  metrics.py  patate.py  pv.py  testing.py  training.py  typings.py  visualization.py
psp/clients/dual_ax/: previous_window_from_test.ipynb  tracker_pv_data_proc.py
psp/clients/island/scripts/: import_poc_data.py
psp/clients/mone/scripts/: resample_pv_data_5min.py
psp/clients/sme/: parse_poc_data_sme.py
psp/clients/uk_pv/: check_resampled.ipynb  resample_uk_pv_data_30min.py
psp/clients/uk_pv/scripts/: data_to_netcdf.py  resmaple_ukv.ipynb  simplify_data.py
psp/data/: uk_pv.py
psp/data/data_sources/: nwp.py  pv.py
psp/data_sources/: excarta.py  irradiance.py  nwp.py  pv.py  satellite.py  utils.py
psp/exp_configs/: base.py  client.py  dual_ax_diffuse_hour.py  dual_ax_static_hour.py  dual_ax_tracker.py  dual_ax_tracker_hour.py  island.py  island_exc.py  mone.py  mone_yesterday.py  recent_history.py  sme.py  test_config1.py  uk_pv.py  uk_pv_prod.py  uk_pv_site_comp.py  uk_pv_site_comp_gen.py  wind_india.py  yesterday.py
psp/ml/: dataset.py  metrics.py  serialization.py  training.py  typings.py  visualization.py
psp/ml/exp_configs/: recent_history.py  yesterday.py
psp/ml/models/: base.py  naive_pvlib.py  previous_day.py  recent_history.py  yesterday.py
psp/ml/models/regressors/: base.py  decision_trees.py  neural_net.py
psp/models/: base.py  client_fc.py  historical_forecasts.py  multi.py  recent_history.py  yesterday.py
psp/models/regressors/: base.py  decision_trees.py  neural_net.py
psp/scripts/: _options.py  data_to_netcdf.py  data_to_sqlite.py  eval_model.py  infer_pv_metadata.py  inspect_data_file.py  simplify_data.py  train_model.py
psp/tests/: conftest.py  test_data.py  test_dataset.py  test_gis.py  test_training.py
psp/tests/data/data_sources/: test_nwp_data_source.py  test_pv_data_source.py  test_satellite_data_source.py  test_utils.py
psp/tests/fixtures/: README.md  pv_data.netcdf
psp/tests/fixtures/models/: model_v1.pkl  model_v2.pkl  model_v3.pkl  model_v4.pkl  model_v5.pkl  model_v6.pkl  model_v7.pkl  model_v7_nwp.pkl  model_v8.pkl
psp/tests/fixtures/nwp.zarr/: .zmetadata
psp/tests/ml/: test_serialization.py
psp/tests/models/: test_load_models.py  test_recent_history.py
psp/tests/scripts/: test_inspect_data_file.py  test_train_model.py
psp/tests/utils/: test_maths.py
psp/utils/: batches.py  hashing.py  maths.py  profiling.py
psp/vendors/mone/: parse_poc_data.py
