[tool.poetry]
name = "psp"
version = "0.1.0"
description = "Photovoltaic per site modeling"
authors = ["Simon Lemieux <1105380+simlmx@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
scikit-learn = "^1.1.3"
pvlib = "^0.9.3"
numpy = "^1.23.5"


[tool.poetry.group.dev.dependencies]
datasets = "^2.7.1"
jupyter = "^1.0.0"
altair = "^4.2.0"
plotly = "^5.11.0"
astral = "^3.2"
pytest = "^7.2.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
jupyter-contrib-nbextensions = "^0.7.0"
black = {extras = ["jupyter"], version = "^22.10.0"}
scipy = "^1.9.3"
tqdm = "^4.64.1"
mypy = "^0.991"
pandas-stubs = "^1.5.2.221213"
types-tqdm = "^4.64.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = 'pvlib.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'astral.*'
ignore_errors = true

[[tool.mypy.overrides]]
module = 'scipy.*'
ignore_missing_imports = true
