[tool.poetry]
name = "pv-site-prediction"
packages = [{include = "psp"}]
version = "0.1.13"
description = "Photovoltaic per site modeling"
authors = ["Simon Lemieux <1105380+simlmx@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
include = ["psp/py.typed"]


[tool.poetry.dependencies]
python = "^3.10,<3.12"
# Pinning to 1.1.* because sklearn emits warnings when loading pickled models from different
# versions.
scikit-learn = "^1.1.3,<1.2.0"
pvlib = "^0.9.3"
numpy = "1.23.5"
xarray = "^2022.12.0"
click = "^8.1.3"
google-cloud-storage = "^2.7.0"
zarr = "^2.13.3"
dask = "^2022.12.1"
h5netcdf = "^1.1.0"
pyproj = "^3.4.1"
fsspec = "^2022.11.0"
gcsfs = "^2022.11.0"
torch = {version="^1.13.1", optional=true}
tqdm = "^4.64.1"
ocf-blosc2 = "^0.0.2"
netcdf4 = "^1.6.3"
streamlit = "^1.24.1"
plotly = "^5.15.0"
streamlit-extras = "^0.2.7"
streamlit-option-menu = "^0.3.6"
pyresample = "^1.27.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
altair = "^4.2.2"
plotly = "^5.11.0"
pytest = "^7.2.0"
jupyter-contrib-nbextensions = "^0.7.0"
black = {extras = ["jupyter"], version = "^22.10.0"}
scipy = "^1.9.3"
pandas-stubs = "^1.5.2.221213"
types-tqdm = "^4.64.7.9"
mypy = "^1.0.0"
pyarrow = "^10.0.1"
types-pyyaml = "^6.0.12.2"
pylint = "^2.15.9"
torchdata = "^0.5.1"
shap = "^0.41.0"
matplotlib = "^3.6.3"
ruff = "^0.0.254"
dtreeviz = "^2.2.0"
ipython = "^8.12.0"
pytest-xdist = "^3.3.1"
jupyterlab = "^3.6.6"

[tool.poetry.extras]
torch = ["torch"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
# Too many packages have missing stubs.
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = 'astral.*'
ignore_errors = true

[tool.ruff]
line-length = 100
select = ["E", "F", "D", "I"]
# In particular ignore all the "missing docstring" errors.
ignore = ['D10','D203','D205','D212','D213','D400','D413','D415','D417']

[tool.black]
line-length = 100